fix right click button menu clipping

--- a/dev/app/views/card-editor.css
+++ b/dev/app/views/card-editor.css
@@ -30,7 +30,18 @@
 #card-editor .card-configs {
     z-index: 1;
     position: relative;
-    
+}
+
+#card-editor .card-configs::before {
+    display: block;
+    content: " ";
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    position: absolute;
+    z-index: -1;
+
     background-color: rgba(var(--rgb-bg), 80%);
     -webkit-mask-image: linear-gradient(to bottom, transparent 0, black 2em);
     mask-image: linear-gradient(to bottom, transparent 0, black 2em);
